# MiniDB

./: .gitignore  ACHIEVEMENT_SUMMARY.md  CLEANUP_SCRIPT.md  COMPLETE_STORAGE_TEST_VERIFICATION.md  COMPLETE_TESTING_MANUAL.md  COMPLETE_TEST_DOCUMENTATION.md  COMPLETE_TEST_REPORT_20250915_122759.md  COMPLETE_TEST_REPORT_20250915_122940.md  COMPLETE_TEST_REPORT_20250915_123000.md  COMPREHENSIVE_TEST_REPORT.md  Cargo.toml  DATABASE_SYSTEM_TEST_REPORT_20250915_130341.md  DATABASE_SYSTEM_TEST_REPORT_20250915_195854.md  DATABASE_SYSTEM_TEST_REPORT_20250915_200733.md  DATA_TYPES_GUIDE.md  DOCS_INDEX.md  FEATURE_CHECKLIST.md  FINAL_TEST_REPORT.md  IMPLEMENTATION_DESIGN_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  INDEX_PERFORMANCE_ANALYSIS_REPORT.md  INTERACTIVE_GUIDE.md  INTERACTIVE_MODE_ANALYSIS.md  INTERACTIVE_UPDATE.md  MANUAL_TEST_GUIDE.md  MINIDB_INTEGRATION_TEST_REPORT_20250915_130652.md  PERSISTENCE_FIX_PLAN.md  PERSISTENCE_IMPLEMENTATION_REPORT.md  PROJECT_CLEANUP_REPORT.md  PROJECT_STRUCTURE.md  PowerShell_UTF8_配置指南.md  QUICK_TEST.md  QUICK_TEST_SCRIPT.md  README.md  REAL_STORAGE_TEST_GUIDE.md  SQL_COMPILER_GUIDE.md  SQL_COMPILER_TEST_REPORT_20250915_130321.md  STORAGE_SYSTEM_TEST_REPORT_20250915_130336.md  STORAGE_TEST_PLAN.md  STORAGE_TEST_REPORT.md  (+35 more)
.github/: AGENTS.md  copilot-instructions.md
comprehensive_index_test/: metadata.json  table_1.json
examples/: cache_policies_demo.rs  optimization_demo.rs
index_performance_comparison/: metadata.json  table_1.json
performance_test_db/: metadata.json  table_1.json
src/: advanced_features_test.rs  database_demo.rs  lib.rs  main.rs  (+5 more)
(+32 files in other folders)
